--- a/politicarecompensas.html
+++ b/politicarecompensas.html
@@ -27,7 +27,7 @@
     <section class="hero">
         <div class="container">
           <div class="deck">
-            <h3>Como Funciona nossa Política de Recompensa?</h3>
+            <h3>Como Funciona nossa Política de Recompensas?</h3>
             <p>Para cada material eletrônico descartado corretamente, você ganha uma quantidade de pontos! Acumule-os para trocar por prêmios ou descontos em lojas parceiras, contribuindo assim para a preservação do meio ambiente e a redução do impacto negativo causado pelo descarte inadequado de materiais eletrônicos </p>
 
           </div>
@@ -37,13 +37,60 @@
         <div class="container">
             <h3 class="rewards__title">Descarte seus materiais eletrônicos de forma consciente e ganhe pontos para trocar por prêmios!</h3>
             <div class="rewards__box">
-                <p class="rewards__card">Descarte seus materiais eletrônicos de forma consciente e ganhe pontos para trocar por prêmios!</p>
-                <p class="rewards__card">Você sabia que o descarte inadequado de materiais eletrônicos pode causar danos ao meio ambiente e à saúde humana? Por isso, é essencial que esses produtos sejam descartados corretamente, através de processos de reciclagem adequados.</p>
-                <p class="rewards__card">Pensando nisso, criamos uma política de recompensa que incentiva o descarte correto de materiais eletrônicos. A cada produto eletrônico descartado de forma consciente, você ganha pontos que podem ser trocados por prêmios ou descontos em lojas parceiras.</p>
-                <p class="rewards__card">E não é só isso! Além de receber prêmios incríveis, ao participar da nossa política de recompensa, você estará contribuindo para a preservação do meio ambiente e a redução do impacto negativo causado pelo descarte inadequado de materiais eletrônicos.</p>
-                <p class="rewards__card">Os materiais eletrônicos descartados são processados através de iniciativas de reciclagem, que transformam esses produtos em novos materiais, evitando que eles sejam descartados de forma prejudicial ao meio ambiente.</p>
-                <p class="rewards__card">E o melhor de tudo é que participar da nossa política de recompensa é muito fácil e divertido! Acumule pontos, troque por prêmios e contribua para um mundo mais sustentável!</p>
-                <p class="rewards__card">Não perca mais tempo, junte-se a nós nessa iniciativa e comece a fazer a diferença!</p>
+              <div class="rewards__card">
+                <div class="rewards__img">
+                  <img src="./assets/images/rewards1.png" alt="iphonereward" sizes="10x10">
+                </div>
+                <h3 class="rewards__card-title">Iphone</h3>
+                <p class="rewards__card-price">1000 pontos</p>
+
+              </div>
+              <div class="rewards__card">
+                <div class="rewards__img">
+                  <img src="./assets/images/rewards1.png" alt="iphonereward" sizes="10x10">
+                </div>
+                <h3 class="rewards__card-title">Iphone</h3>
+                <p class="rewards__card-price">1000 pontos</p>
+
+              </div>
+
+              <div class="rewards__card">
+                <div class="rewards__img">
+                  <img src="./assets/images/rewards1.png" alt="iphonereward" sizes="10x10">
+                </div>
+                <h3 class="rewards__card-title">Iphone</h3>
+                <p class="rewards__card-price">1000 pontos</p>
+
+              </div>
+
+              <div class="rewards__card">
+                <div class="rewards__img">
+                  <img src="./assets/images/rewards1.png" alt="iphonereward" sizes="10x10">
+                </div>
+                <h3 class="rewards__card-title">Iphone</h3>
+                <p class="rewards__card-price">1000 pontos</p>
+
+              </div>
+
+              <div class="rewards__card">
+                <div class="rewards__img">
+                  <img src="./assets/images/rewards1.png" alt="iphonereward" sizes="10x10">
+                </div>
+                <h3 class="rewards__card-title">Iphone</h3>
+                <p class="rewards__card-price">1000 pontos</p>
+
+              </div>
+
+
+            </div>
+            <div class="rewards__page">
+                <p>Descarte seus materiais eletrônicos de forma consciente e ganhe pontos para trocar por prêmios!</p>
+                <p>Você sabia que o descarte inadequado de materiais eletrônicos pode causar danos ao meio ambiente e à saúde humana? Por isso, é essencial que esses produtos sejam descartados corretamente, através de processos de reciclagem adequados.</p>
+                <p>Pensando nisso, criamos uma política de recompensa que incentiva o descarte correto de materiais eletrônicos. A cada produto eletrônico descartado de forma consciente, você ganha pontos que podem ser trocados por prêmios ou descontos em lojas parceiras.</p>
+                <p>E não é só isso! Além de receber prêmios incríveis, ao participar da nossa política de recompensa, você estará contribuindo para a preservação do meio ambiente e a redução do impacto negativo causado pelo descarte inadequado de materiais eletrônicos.</p>
+                <p>Os materiais eletrônicos descartados são processados através de iniciativas de reciclagem, que transformam esses produtos em novos materiais, evitando que eles sejam descartados de forma prejudicial ao meio ambiente.</p>
+                <p>E o melhor de tudo é que participar da nossa política de recompensa é muito fácil e divertido! Acumule pontos, troque por prêmios e contribua para um mundo mais sustentável!</p>
+                <p>Não perca mais tempo, junte-se a nós nessa iniciativa e comece a fazer a diferença!</p>
 
 
             </div>
