dinamic cards update

--- a/politicarecompensas.html
+++ b/politicarecompensas.html
@@ -23,6 +23,8 @@
         <button class="secondary-button login-button">Login</button>
       </div>
       
+
+
     </nav>
     <section class="hero">
         <div class="container">
@@ -37,7 +39,7 @@
         <div class="container">
             <h3 class="rewards__title">Descarte seus materiais eletrônicos de forma consciente e ganhe pontos para trocar por prêmios!</h3>
             <div class="rewards__box">
-              <div class="rewards__card">
+              <!-- <div class="rewards__card">
                 <div class="rewards__img">
                   <img src="./assets/images/rewards1.png" alt="iphonereward" sizes="10x10">
                 </div>
@@ -79,7 +81,7 @@
                 <h3 class="rewards__card-title">Iphone</h3>
                 <p class="rewards__card-price">1000 pontos</p>
 
-              </div>
+              </div> -->
 
 
             </div>
