update link navbar

--- a/politicarecompensas.html
+++ b/politicarecompensas.html
@@ -17,10 +17,10 @@
         <a href="index.html"><img  src="./assets/images/foreverwarelogo.png"  alt="Workit logo"></a> 
       </div>
       <div class="nav__cta">
-        <button class="secondary-button">Onde Descartar</button>
-        <button class="secondary-button">Política de Recompensas</button>
-        <button class="secondary-button">Sobre Nós</button>
-        <button class="secondary-button login-button">Login</button>
+        <a href="ondedescartar.html"><button class="secondary-button">Onde Descartar</button></a>
+        <a href="politicarecompensas.html"><button class="secondary-button">Política de Recompensas</button></a>
+        <!-- <a href="#cta"><button class="secondary-button">Sobre Nós</button></a> -->
+        <a href="login.html"><button class="secondary-button login-button">Login</button></a>
       </div>
       
 
