--- a/politicarecompensas.html
+++ b/politicarecompensas.html
@@ -38,10 +38,7 @@
     <section class="rewards">
         <div class="container">
             <h3 class="rewards__title">Descarte seus materiais eletrônicos de forma consciente e ganhe pontos para trocar por prêmios!</h3>
-            <div class="rewards__box">
-            
-
-            </div>
+            <div class="rewards__box"></div>
             <div class="rewards__page">
                 <p>Descarte seus materiais eletrônicos de forma consciente e ganhe pontos para trocar por prêmios!</p>
                 <p>Você sabia que o descarte inadequado de materiais eletrônicos pode causar danos ao meio ambiente e à saúde humana? Por isso, é essencial que esses produtos sejam descartados corretamente, através de processos de reciclagem adequados.</p>
@@ -50,25 +47,20 @@
                 <p>Os materiais eletrônicos descartados são processados através de iniciativas de reciclagem, que transformam esses produtos em novos materiais, evitando que eles sejam descartados de forma prejudicial ao meio ambiente.</p>
                 <p>E o melhor de tudo é que participar da nossa política de recompensa é muito fácil e divertido! Acumule pontos, troque por prêmios e contribua para um mundo mais sustentável!</p>
                 <p>Não perca mais tempo, junte-se a nós nessa iniciativa e comece a fazer a diferença!</p>
-
-
             </div>
         </div>
-
     </section>
-    
-
-
-  <footer>
-      <div class="footer__logo">
-        <img src="./assets/images/foreverwarelogodark.png" alt="Workit logo">
-      </div>
-      <div class="footer__social">
-        <a href="#"><img src="./assets/images/icon-facebook.svg" alt="Facebook icon"></a>
-        <a href="#"><img src="./assets/images/icon-twitter.svg" alt="Twitter icon"></a>
-        <a href="#"><img src="./assets/images/icon-instagram.svg" alt="Instagram icon"></a>
-      </div>
-  </footer>
-  <script type="module" src="./js/main.js"></script>
+  </main>  
+<footer>
+  <div class="footer__logo">
+    <img src="./assets/images/foreverwarelogodark.png" alt="Workit logo">
+  </div>
+  <div class="footer__social">
+    <a href="#"><img src="./assets/images/icon-facebook.svg" alt="Facebook icon"></a>
+    <a href="#"><img src="./assets/images/icon-twitter.svg" alt="Twitter icon"></a>
+    <a href="#"><img src="./assets/images/icon-instagram.svg" alt="Instagram icon"></a>
+  </div>
+</footer>
+<script type="module" src="./js/main.js"></script>
 </body>
 </html>
