--- a/index.html
+++ b/index.html
@@ -1,94 +1,141 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="30x30" href="./assets/images/pngwing.com.png">
-  <link rel="stylesheet" href="css/styles.css">
-  <title>ForeverWare | Descarte e Conhecimento</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="30x30"
+      href="./assets/images/pngwing.com.png"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>ForeverWare | Descarte e Conhecimento</title>
+  </head>
+  <body>
+    <main>
+      <nav class="nav">
+        <div class="nav__logo">
+          <!-- <h3>ForeverWare</h3> -->
+          <a href="index.html"
+            ><img src="./assets/images/foreverwarelogo.png" alt="Workit logo"
+          /></a>
+        </div>
+        <div class="nav__cta">
+          <a href="ondedescartar.html"
+            ><button class="secondary-button">Onde Descartar</button></a
+          >
+          <a href="politicarecompensas.html"
+            ><button class="secondary-button">
+              Política de Recompensas
+            </button></a
+          >
+          <a href="#cta"><button class="secondary-button">Sobre Nós</button></a>
+          <a href="login.html"
+            ><button class="secondary-button login-button">Login</button></a
+          >
+        </div>
+      </nav>
+      <section class="hero">
+        <div class="container">
+          <h1>
+            O <span class="hero__accent">conhecimento</span> pode salvar o
+            futuro
+          </h1>
+          <a href="#features" data-scroll
+            ><button class="primary-button rounded-button">
+              Saiba mais
+            </button></a
+          >
+        </div>
+      </section>
+      <section id="features">
+        <div class="container">
+          <h2 class="feature-title">
+            Por que descartar materiais eletrônicos de forma correta?
+          </h2>
 
-</head>
-<body>
-  <main>
-    <nav class="nav">
-      <div class="nav__logo">
-        <!-- <h3>ForeverWare</h3> -->
-        <a href="index.html"><img  src="./assets/images/foreverwarelogo.png"  alt="Workit logo"></a>
-      </div>
-      <div class="nav__cta">
-
-        <a href="ondedescartar.html"><button class="secondary-button">Onde Descartar</button></a>
-        <a href="politicarecompensas.html"><button class="secondary-button">Política de Recompensas</button></a>
-        <a href="#cta"><button class="secondary-button">Sobre Nós</button></a>
-        <a href="login.html"><button class="secondary-button login-button">Login</button></a>
-
-      </div>
-      
-    </nav>
-    <section class="hero">
-      <div class="container">
-        <h1>O <span class="hero__accent">conhecimento</span> pode salvar o futuro</h1>
-        <a href="#features" data-scroll><button class="primary-button rounded-button">Saiba mais</button></a>
-      </div>
-    </section>
-    <section id="features">
-      <div class="container">
-        <h2 class="feature-title">Por que descartar materiais eletrônicos de forma correta?</h2>
-
-        <div class="features__box">
-          
-          <div class="feature__card">
-            <div class="card__header">
-              <p class="feature__card--icon">1</p>
+          <div class="features__box">
+            <div class="feature__card">
+              <div class="card__header">
+                <p class="feature__card--icon">1</p>
+              </div>
+              <div class="feature__body">
+                <h3 class="feature__card--title">Impacto Ambiental</h3>
+                <p class="feature__card--text">
+                  Diminui o impacto ambiental causado pelos dispositivos
+                  eletrônicos, os quais liberam substâncias tóxicas que
+                  contaminam o solo e a água se não descartados corretamente.
+                </p>
+              </div>
             </div>
-            <div class="feature__body">
-              <h3 class="feature__card--title">Impacto Ambiental</h3>
-              <p class="feature__card--text">Diminui o impacto ambiental causado pelos dispositivos eletrônicos, os quais liberam substâncias tóxicas que contaminam o solo e a água se não descartados corretamente.</p>
+            <div class="feature__card">
+              <div class="card__header">
+                <p class="feature__card--icon">2</p>
+              </div>
+              <div class="feature__body">
+                <h3 class="feature__card--title">Reciclagem</h3>
+                <p class="feature__card--text">
+                  Materiais eletrônicos contêm uma variedade de metais que podem
+                  ser recuperados e reutilizados em novos produtos. A partir
+                  disso, reduzindo a necessidade de mineração e extração de
+                  recursos naturais escassos
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="feature__card">
-            <div class="card__header">
-              <p class="feature__card--icon">2</p>
-            </div>
-            <div class="feature__body">
-              <h3 class="feature__card--title">Reciclagem</h3>
-              <p class="feature__card--text">Materiais eletrônicos contêm uma variedade de metais que podem ser recuperados e reutilizados em novos produtos. A partir disso, reduzindo a necessidade de mineração e extração de recursos naturais escassos</p>
-            </div>
-          </div>
-          <div class="feature__card">
-            <div class="card__header">
-              <p class="feature__card--icon">3</p>
-            </div>
-            <div class="feature__body">
-              <h3 class="feature__card--title">Segurança de Dados</h3>
-              <p class="feature__card--text">Muitos dispositivos eletrônicos contêm informações pessoais e confidenciais, e o descarte inadequado desses dispositivos pode levar à exposição de dados sensíveis a terceiros não autorizados.</p>
+            <div class="feature__card">
+              <div class="card__header">
+                <p class="feature__card--icon">3</p>
+              </div>
+              <div class="feature__body">
+                <h3 class="feature__card--title">Segurança de Dados</h3>
+                <p class="feature__card--text">
+                  Muitos dispositivos eletrônicos contêm informações pessoais e
+                  confidenciais, e o descarte inadequado desses dispositivos
+                  pode levar à exposição de dados sensíveis a terceiros não
+                  autorizados.
+                </p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section id="cta">
-      <div class="cta__box">
-        <img  src="./assets/images/authorphoto.png" alt="Founder image">
-        <h2 class="cta__box--title">Maria Eduarda de Almeida  Vitorino</h2>
-        <p class="cta__box--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia id illo amet cupiditate ex numquam! Sunt ex placeat porro at, odit minus voluptatem veniam commodi. Natus error consequatur corporis facilis?</p>
-        <a href="https://github.com/vtrnduda"><button class="primary-button rounded-button">Saiba mais</button></a>
+      </section>
+      <section id="cta">
+        <div class="cta__box">
+          <img src="./assets/images/authorphoto.png" alt="Founder image" />
+          <h2 class="cta__box--title">Maria Eduarda de Almeida Vitorino</h2>
+          <p class="cta__box--text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia id
+            illo amet cupiditate ex numquam! Sunt ex placeat porro at, odit
+            minus voluptatem veniam commodi. Natus error consequatur corporis
+            facilis?
+          </p>
+          <a href="https://github.com/vtrnduda"
+            ><button class="primary-button rounded-button">
+              Saiba mais
+            </button></a
+          >
         </div>
-    </section>
-  </main>
-  <footer>
+      </section>
+    </main>
+    <footer>
       <div class="footer__logo">
-        <img src="./assets/images/foreverwarelogodark.png" alt="Workit logo">
+        <img src="./assets/images/foreverwarelogodark.png" alt="Workit logo" />
       </div>
       <div class="footer__social">
-        <a href="#"><img src="./assets/images/icon-facebook.svg" alt="Facebook icon"></a>
-        <a href="#"><img src="./assets/images/icon-twitter.svg" alt="Twitter icon"></a>
-        <a href="#"><img src="./assets/images/icon-instagram.svg" alt="Instagram icon"></a>
+        <a href="#"
+          ><img src="./assets/images/icon-facebook.svg" alt="Facebook icon"
+        /></a>
+        <a href="#"
+          ><img src="./assets/images/icon-twitter.svg" alt="Twitter icon"
+        /></a>
+        <a href="#"
+          ><img src="./assets/images/icon-instagram.svg" alt="Instagram icon"
+        /></a>
       </div>
-  </footer>
-  
-  <script type="module" src="./js/main.js"></script>
+    </footer>
 
-</body>
+    <script type="module" src="./js/main.js"></script>
+  </body>
 </html>
