--- a/login.html
+++ b/login.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="30x30" href="./assets/images/pngwing.com.png">
-  
-  <link rel="stylesheet" href="css/login.css">
-  <title>ForeverWare | Descarte e Conhecimento</title>
-</head>
-<body>
-  <main>
-    <nav class="nav">
-      <div class="nav__logo">
-        <!-- <h3>ForeverWare</h3> -->
-        <a href="index.html"><img  src="./assets/images/foreverwarelogo.png"  alt="Workit logo"></a> 
-      </div>
-      <div class="nav__cta">
-        <a href="ondedescartar.html"><button class="secondary-button">Onde Descartar</button></a>
-        <a href="politicarecompensas.html"><button class="secondary-button">Política de Recompensas</button></a>
-        <a href="login.html"><button class="secondary-button login-button">Login</button></a>
-      </div>
-      
-    </nav>
-    <section class="hero">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="30x30"
+      href="./assets/images/pngwing.com.png"
+    />
+
+    <link rel="stylesheet" href="css/login.css" />
+    <title>ForeverWare | Descarte e Conhecimento</title>
+  </head>
+  <body>
+    <main>
+      <nav class="nav">
+        <div class="nav__logo">
+          <!-- <h3>ForeverWare</h3> -->
+          <a href="index.html"
+            ><img src="./assets/images/foreverwarelogo.png" alt="Workit logo"
+          /></a>
+        </div>
+        <div class="nav__cta">
+          <a href="ondedescartar.html"
+            ><button class="secondary-button">Onde Descartar</button></a
+          >
+          <a href="politicarecompensas.html"
+            ><button class="secondary-button">
+              Política de Recompensas
+            </button></a
+          >
+          <a href="login.html"
+            ><button class="secondary-button login-button">Login</button></a
+          >
+        </div>
+      </nav>
+      <section class="hero">
         <div class="container">
           <div class="message">
             <h1 class="sad__face">&colon;&lpar;</h1>
             <h1 class="not__ready">Still working on it</h1>
           </div>
         </div>
-    </section>
-  </main>
-  <footer>
+      </section>
+    </main>
+    <footer>
       <div class="footer__logo">
-        <img src="./assets/images/foreverwarelogodark.png" alt="Workit logo">
+        <img src="./assets/images/foreverwarelogodark.png" alt="Workit logo" />
       </div>
       <div class="footer__social">
-        <a href="#"><img src="./assets/images/icon-facebook.svg" alt="Facebook icon"></a>
-        <a href="#"><img src="./assets/images/icon-twitter.svg" alt="Twitter icon"></a>
-        <a href="#"><img src="./assets/images/icon-instagram.svg" alt="Instagram icon"></a>
+        <a href="#"
+          ><img src="./assets/images/icon-facebook.svg" alt="Facebook icon"
+        /></a>
+        <a href="#"
+          ><img src="./assets/images/icon-twitter.svg" alt="Twitter icon"
+        /></a>
+        <a href="#"
+          ><img src="./assets/images/icon-instagram.svg" alt="Instagram icon"
+        /></a>
       </div>
-  </footer>
-  <script type="module" src="./js/main.js"></script>
-</body>
+    </footer>
+    <script type="module" src="./js/main.js"></script>
+  </body>
 </html>
