--- a/politicarecompensas.html
+++ b/politicarecompensas.html
@@ -1,66 +1,122 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="30x30" href="./assets/images/pngwing.com.png">
-  
-  <link rel="stylesheet" href="css/politicarecompensas.css">
-  <title>ForeverWare | Descarte e Conhecimento</title>
-</head>
-<body>
-  <main>
-    <nav class="nav">
-      <div class="nav__logo">
-        <!-- <h3>ForeverWare</h3> -->
-        <a href="index.html"><img  src="./assets/images/foreverwarelogo.png"  alt="Workit logo"></a> 
-      </div>
-      <div class="nav__cta">
-        <a href="ondedescartar.html"><button class="secondary-button">Onde Descartar</button></a>
-        <a href="politicarecompensas.html"><button class="secondary-button">Política de Recompensas</button></a>
-        <!-- <a href="#cta"><button class="secondary-button">Sobre Nós</button></a> -->
-        <a href="login.html"><button class="secondary-button login-button">Login</button></a>
-      </div>
-      
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="30x30"
+      href="./assets/images/pngwing.com.png"
+    />
 
-
-    </nav>
-    <section class="hero">
+    <link rel="stylesheet" href="css/politicarecompensas.css" />
+    <title>ForeverWare | Descarte e Conhecimento</title>
+  </head>
+  <body>
+    <main>
+      <nav class="nav">
+        <div class="nav__logo">
+          <!-- <h3>ForeverWare</h3> -->
+          <a href="index.html"
+            ><img src="./assets/images/foreverwarelogo.png" alt="Workit logo"
+          /></a>
+        </div>
+        <div class="nav__cta">
+          <a href="ondedescartar.html"
+            ><button class="secondary-button">Onde Descartar</button></a
+          >
+          <a href="politicarecompensas.html"
+            ><button class="secondary-button">
+              Política de Recompensas
+            </button></a
+          >
+          <!-- <a href="#cta"><button class="secondary-button">Sobre Nós</button></a> -->
+          <a href="login.html"
+            ><button class="secondary-button login-button">Login</button></a
+          >
+        </div>
+      </nav>
+      <section class="hero">
         <div class="container">
           <div class="deck">
             <h3>Como Funciona nossa Política de Recompensas?</h3>
-            <p>Para cada material eletrônico descartado corretamente, você ganha uma quantidade de pontos! Acumule-os para trocar por prêmios ou descontos em lojas parceiras, contribuindo assim para a preservação do meio ambiente e a redução do impacto negativo causado pelo descarte inadequado de materiais eletrônicos </p>
-
+            <p>
+              Para cada material eletrônico descartado corretamente, você ganha
+              uma quantidade de pontos! Acumule-os para trocar por prêmios ou
+              descontos em lojas parceiras, contribuindo assim para a
+              preservação do meio ambiente e a redução do impacto negativo
+              causado pelo descarte inadequado de materiais eletrônicos
+            </p>
           </div>
         </div>
-    </section>
-    <section class="rewards">
+      </section>
+      <section class="rewards">
         <div class="container">
-            <h3 class="rewards__title">Descarte seus materiais eletrônicos de forma consciente e ganhe pontos para trocar por prêmios!</h3>
-            <div class="rewards__box"></div>
-            <div class="rewards__page">
-                <p>Descarte seus materiais eletrônicos de forma consciente e ganhe pontos para trocar por prêmios!</p>
-                <p>Você sabia que o descarte inadequado de materiais eletrônicos pode causar danos ao meio ambiente e à saúde humana? Por isso, é essencial que esses produtos sejam descartados corretamente, através de processos de reciclagem adequados.</p>
-                <p>Pensando nisso, criamos uma política de recompensa que incentiva o descarte correto de materiais eletrônicos. A cada produto eletrônico descartado de forma consciente, você ganha pontos que podem ser trocados por prêmios ou descontos em lojas parceiras.</p>
-                <p>E não é só isso! Além de receber prêmios incríveis, ao participar da nossa política de recompensa, você estará contribuindo para a preservação do meio ambiente e a redução do impacto negativo causado pelo descarte inadequado de materiais eletrônicos.</p>
-                <p>Os materiais eletrônicos descartados são processados através de iniciativas de reciclagem, que transformam esses produtos em novos materiais, evitando que eles sejam descartados de forma prejudicial ao meio ambiente.</p>
-                <p>E o melhor de tudo é que participar da nossa política de recompensa é muito fácil e divertido! Acumule pontos, troque por prêmios e contribua para um mundo mais sustentável!</p>
-                <p>Não perca mais tempo, junte-se a nós nessa iniciativa e comece a fazer a diferença!</p>
-            </div>
+          <h3 class="rewards__title">
+            Descarte seus materiais eletrônicos de forma consciente e ganhe
+            pontos para trocar por prêmios!
+          </h3>
+          <div class="rewards__box"></div>
+          <div class="rewards__page">
+            <p>
+              Descarte seus materiais eletrônicos de forma consciente e ganhe
+              pontos para trocar por prêmios!
+            </p>
+            <p>
+              Você sabia que o descarte inadequado de materiais eletrônicos pode
+              causar danos ao meio ambiente e à saúde humana? Por isso, é
+              essencial que esses produtos sejam descartados corretamente,
+              através de processos de reciclagem adequados.
+            </p>
+            <p>
+              Pensando nisso, criamos uma política de recompensa que incentiva o
+              descarte correto de materiais eletrônicos. A cada produto
+              eletrônico descartado de forma consciente, você ganha pontos que
+              podem ser trocados por prêmios ou descontos em lojas parceiras.
+            </p>
+            <p>
+              E não é só isso! Além de receber prêmios incríveis, ao participar
+              da nossa política de recompensa, você estará contribuindo para a
+              preservação do meio ambiente e a redução do impacto negativo
+              causado pelo descarte inadequado de materiais eletrônicos.
+            </p>
+            <p>
+              Os materiais eletrônicos descartados são processados através de
+              iniciativas de reciclagem, que transformam esses produtos em novos
+              materiais, evitando que eles sejam descartados de forma
+              prejudicial ao meio ambiente.
+            </p>
+            <p>
+              E o melhor de tudo é que participar da nossa política de
+              recompensa é muito fácil e divertido! Acumule pontos, troque por
+              prêmios e contribua para um mundo mais sustentável!
+            </p>
+            <p>
+              Não perca mais tempo, junte-se a nós nessa iniciativa e comece a
+              fazer a diferença!
+            </p>
+          </div>
         </div>
-    </section>
-  </main>  
-<footer>
-  <div class="footer__logo">
-    <img src="./assets/images/foreverwarelogodark.png" alt="Workit logo">
-  </div>
-  <div class="footer__social">
-    <a href="#"><img src="./assets/images/icon-facebook.svg" alt="Facebook icon"></a>
-    <a href="#"><img src="./assets/images/icon-twitter.svg" alt="Twitter icon"></a>
-    <a href="#"><img src="./assets/images/icon-instagram.svg" alt="Instagram icon"></a>
-  </div>
-</footer>
-<script type="module" src="./js/main.js"></script>
-</body>
+      </section>
+    </main>
+    <footer>
+      <div class="footer__logo">
+        <img src="./assets/images/foreverwarelogodark.png" alt="Workit logo" />
+      </div>
+      <div class="footer__social">
+        <a href="#"
+          ><img src="./assets/images/icon-facebook.svg" alt="Facebook icon"
+        /></a>
+        <a href="#"
+          ><img src="./assets/images/icon-twitter.svg" alt="Twitter icon"
+        /></a>
+        <a href="#"
+          ><img src="./assets/images/icon-instagram.svg" alt="Instagram icon"
+        /></a>
+      </div>
+    </footer>
+    <script type="module" src="./js/main.js"></script>
+  </body>
 </html>
