reference to react

--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
           <a href="ondedescartar.html"
             ><button class="secondary-button">Onde Descartar</button></a
           >
-          <a href="politicarecompensas.html"
+          <a href="http://localhost:3001/"
             ><button class="secondary-button">
               Política de Recompensas
             </button></a
