--- a/ondedescartar.html
+++ b/ondedescartar.html
@@ -18,7 +18,7 @@
       </div>
       <div class="nav__cta">
         <a href="ondedescartar.html"><button class="secondary-button">Onde Descartar</button></a>
-        <a href="politicarecompensas.html"><button class="secondary-button">Política de Recompensas</button></a>
+        <a href="http://localhost:3001/"><button class="secondary-button">Política de Recompensas</button></a>
         <!-- <a href="#cta"><button class="secondary-button">Sobre Nós</button></a> -->
         <a href="login.html"><button class="secondary-button login-button">Login</button></a>
       </div>
